# slappy

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: main.rs  utils.rs
src/ui/: crop.rs  mod.rs  move_resize.rs  utils.rs
src/ui/shape/: circle.rs  line.rs  mod.rs  number.rs  pen.rs  rectangle.rs  text.rs
src/ui/window/: edit_window.rs  mod.rs  pin_window.rs
